@@ -1,5 +1,8 @@
 2.0.5:
-Ozkan Sezer - Sun Dec 17 14:56:04 2019
+Vitaly Novichkov - Thu Dec 17 15:50:02 2019
+ * Fixed music_mpg123 seek bug when sample rate of the file and
+   the stream don't match
+Ozkan Sezer - Thu Dec 17 14:56:04 2019
  * Timidity improvements. New Mix_SetTimidityCfg() public api.
 Ozkan Sezer - Sun Dec 08 10:20:40 2019
  * Improved mp3 tag detection/skipping
